# imgui

./: .gitignore  CMakeLists.txt  Config.h.in  Makefile.emscripten  imconfig.h  imconfig.h.in  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_helper.cpp  imgui_helper.h  imgui_internal.h  imgui_mat.h  imgui_user.cpp  imgui_user.h  imgui_widgets.cpp  immat.h  mono_hei.cpp  mono_mid.cpp  mono_yahei.cpp  mono_yuan.cpp  monohei.cpp  sdl_opengl3.ini  stb_image.h
ImGuiFileDialog/: ImGuiFileDialog.cpp
addon/: NumberTexture.cpp  addons_demo.cpp  addons_demo.h
addon/Bezier/: Bezier.cpp  Bezier.h
addon/DearWidgets/: dear_widgets.cpp  dear_widgets.h  dear_widgets.hpp  dear_widgets_demo.cpp
addon/HotKey/: HotKey.h
addon/ImGuiDateChooser/: ImGuiDateChooser.cpp
addon/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h  ImGuiFileDialogDemo.cpp  dirent_win32.h
addon/ImGuiFileSystem/: ImGuiFileSystem.cpp  ImGuiFileSystem.h
addon/ImGuiHelper/: ImGuiHelper.cpp  ImGuiHelper.h
addon/ImGuiNodeGraphEditor/: ImGuiNodeGraphEditor.cpp  ImGuiNodeGraphEditor.h
addon/ImGuiQuat/: imGuIZMOquat.cpp  imGuIZMOquat.h  imGuIZMOquat_demo.cpp
addon/ImGuiTabWindow/: ImGuiTabWindow.cpp  ImGuiTabWindow.h  ImGuiTabWindow_demo.cpp
addon/ImGuiVariousControls/: ImGuiVariousControls.cpp  ImGuiVariousControls.h  ImGuiVariousControls_demo.cpp  NumberTexture.h
addon/ImGuizmo/: ImCurveEdit.cpp  ImGradient.cpp  ImGuizmo.cpp  ImGuizmo.h  ImGuizmoDemo.cpp  ImSequencer.cpp
addon/ImSequencer/: ImSequencer.cpp  ImSequencer.h
addon/ImVulkanShader/: CMakeLists.txt  Cast_vulkan.cpp  Cast_vulkan.h  ColorConvert_shader.h  ColorConvert_vulkan.cpp  ColorConvert_vulkan.h  ImVulkanShader.cpp  ImVulkanShader.h  Packing_vulkan.cpp  Packing_vulkan.h  Resize_shader.h  Resize_vulkan.cpp  Resize_vulkan.h  allocator.cpp  allocator.h  buffer.h  color.cpp  colorspace_table.cpp  command.cpp  command.h  gpu.cpp  gpu.h  im_mat.h  imvk_Cast_vulkan.cpp  imvk_Cast_vulkan.h  imvk_Packing_vulkan.cpp  imvk_Packing_vulkan.h  imvk_allocator.cpp  imvk_allocator.h  imvk_command.cpp  imvk_command.h  imvk_copy_make_border.cpp  imvk_copy_make_border.h  imvk_copy_make_border_shader.h  imvk_gpu.cpp  imvk_gpu.h  imvk_image_mat.h  imvk_mat.h  imvk_mat_shader.h  imvk_option.cpp  (+21 more)
addon/ImVulkanShader/filters/: ALM_shader.h  ALM_vulkan.cpp  ALM_vulkan.h  AlphaBlending_shader.h  AlphaBlending_vulkan.cpp  AlphaBlending_vulkan.h  Bilateral_shader.h  Bilateral_vulkan.cpp  Bilateral_vulkan.h  Box.cpp  Box.h  Brightness_shader.h  Brightness_vulkan.cpp  Brightness_vulkan.h  CAS_shader.h  CAS_vulkan.cpp  CAS_vulkan.h  CIE_shader.h  CIE_vulkan.cpp  CIE_vulkan.h  Canny_shader.h  Canny_vulkan.cpp  Canny_vulkan.h  ChromaKey_shader.h  ChromaKey_vulkan.cpp  ChromaKey_vulkan.h  ColorBalance_shader.h  ColorBalance_vulkan.cpp  ColorBalance_vulkan.h  ColorConvert_shader.h  ColorConvert_vulkan.cpp  ColorConvert_vulkan.h  ColorInvert_shader.h  ColorInvert_vulkan.cpp  ColorInvert_vulkan.h  Concat_shader.h  Concat_vulkan.cpp  Concat_vulkan.h  Contrast_shader.h  Contrast_vulkan.cpp  (+72 more)
addon/ImVulkanShader/filters/lut3d/: HDR2020HLG_HDR2020PQ.h  HDR2020PQ_HDR2020HLG.h  HDR2020_HLG_SDR709.h  HDR2020_PQ_SDR709.h  Lut3D.cpp  Lut3D.h  Lut3D_Shader.h  SDR709_HDR2020_HLG.h  SDR709_HDR2020_PQ.h
addon/ImVulkanShader/glslang/: CMakeLists.txt
addon/ImVulkanShader/glslang/glslang/: CMakeLists.txt
addon/ImVulkanShader/glslang/glslang/MachineIndependent/: ParseHelper.h  attribute.cpp
addon/MemoryEditor/: imgui_memory_editor.h
addon/ProgressIndicators/: ProgressIndicators.cpp  ProgressIndicators.h
addon/Spin/: Spin.cpp  Spin.h
addon/Splitter/: Splitter.cpp  Splitter.h
addon/TextEditor/: TextEditor.cpp  TextEditor.h
addon/Timeline/: Timeline.cpp  Timeline.h
addon/ToggleButton/: ToggleButton.cpp  ToggleButton.h
addon/imguiDock/: imgui_dock.cpp  imgui_dock.h
addon/imgui_extra_widget/: imgui_extra_widget.cpp  imgui_extra_widget.h  imgui_extra_widget_demo.cpp
addon/imgui_knob/: imgui_knob.cpp  imgui_knob.h  imgui_knob_demo.cpp
addon/imgui_node_editor/: crude_logger.cpp  crude_logger.h  imgui_canvas.cpp  imgui_canvas.h  imgui_json.cpp  imgui_json.h  imgui_logger.cpp  imgui_logger.h  imgui_node_editor.cpp  imgui_node_editor.h  (+3 more)
backends/: imgui_impl_allegro5.cpp  imgui_impl_allegro5.h  imgui_impl_android.cpp  imgui_impl_dx10.cpp  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_glut.cpp  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_sdl_es2.cpp  imgui_impl_sdl_es2.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_win32.cpp  imgui_impl_win32.h
docs/: BACKENDS.md  FAQ.md  ImGuiFileDialog.md  README.md  imgui_node_editor.md  imgui_node_editor_CHANGELOG.txt
fonts/: Cousine-Regular.cpp  DroidSans.cpp  Karla-Regular.cpp  Monaco.cpp  ProggyClean.cpp  ProggyTiny.cpp  Roboto-Medium.cpp  SourceCodePro-Regular.cpp  mono_sarasa.cpp  mono_yuan.cpp
icons/: IconsFontAwesome4.h  IconsFontAwesome5.h  IconsFontAwesome5Brands.h  IconsFontaudio.h  IconsMaterialDesign.h  NumberTexture.cpp  fa_brands.cpp  fa_regular.cpp  fa_solid.cpp  folder.cpp  folder.h  fontaudio.cpp  icons.cpp  icons.h  material_icons.cpp
misc/: DynObjectLoader.h  stb_image.h  stb_image_write.h
test/: example_apple_metal.mm  example_application.cpp  example_emscripten_opengl3.cpp  example_file_dialog.cpp  example_glfw_metal.mm  example_glfw_opengl3.cpp  example_glfw_vulkan.cpp  example_glut_opengl2.cpp  example_implot.cpp  example_node_edit_basic_interaction.cpp  example_node_edit_canvas.cpp  example_node_edit_simple.cpp  example_sdl_opengl2.cpp  example_sdl_opengl3.cpp  example_sdl_opengles2.cpp  example_sdl_rendering.cpp  example_sdl_video.cpp  example_sdl_vulkan.cpp  example_video.cpp  example_win32_directx10.cpp  example_win32_directx11.cpp  example_win32_directx12.cpp  example_win32_directx9.cpp  immat_test.cpp  vulkan_shader_test.cpp
(+75 files in other folders)
